[project]
name = "log-agent"
version = "0.1.0"
description = "基于 deepagents 的 CLI 日志分析智能体，结合日志与源码定位问题根因"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.0",
    "langchain-openai>=0.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
log-agent = "log_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_agent"]
